crates/oxc_react_compiler/tests/snapshots/useContext-read-context-in-callback.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/useContext-read-context-in-callback.js
---
import { c as _c } from "react/compiler-runtime";
import { createContext, useContext } from "react";
const FooContext = createContext({ current: null });
function Component(props) {
	const $ = _c(5);
	const foo = useContext(FooContext);
	let t0;
	if ($[0] !== foo) {
		t0 = () => {
			console.log(foo.current);
		};
		$[0] = foo;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	const onClick = t0;
	let t1;
	if ($[2] !== onClick || $[3] !== props.children) {
		t1 = <div onClick={onClick}>{props.children}</div>;
		$[2] = onClick;
		$[3] = props.children;
		$[4] = t1;
	} else {
		t1 = $[4];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ children: <div>Hello</div> }]
};
