crates/oxc_react_compiler/tests/snapshots/useEffect-external-mutate.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/useEffect-external-mutate.js
---
import { useEffect } from "react";
let x = { a: 42 };
function Component(props) {
	useEffect(_temp);
}
function _temp() {
	x.a = 10;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: []
};
