crates/oxc_react_compiler/tests/snapshots/useEffect-method-call.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/useEffect-method-call.js
---
let x = {};
function Component() {
	React.useEffect(_temp);
}
function _temp() {
	x.foo = 1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: []
};
