crates/oxc_react_compiler/tests/snapshots/useEffect-snap-test.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/useEffect-snap-test.js
---
import { c as _c } from "react/compiler-runtime";
import { useEffect, useState } from "react";
function Component() {
	const $ = _c(4);
	const [state, setState] = useState("hello");
	let t0;
	let t1;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = () => {
			setState("goodbye");
		};
		t1 = [];
		$[0] = t0;
		$[1] = t1;
	} else {
		t0 = $[0];
		t1 = $[1];
	}
	useEffect(t0, t1);
	let t2;
	if ($[2] !== state) {
		t2 = <div>{state}</div>;
		$[2] = state;
		$[3] = t2;
	} else {
		t2 = $[3];
	}
	return t2;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{}]
};
