crates/oxc_react_compiler/tests/snapshots/useMemo-empty-return.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/useMemo-empty-return.js
---
import { c as _c } from "react/compiler-runtime";
// @validateNoVoidUseMemo
function Component() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = <div>{undefined}</div>;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
