crates/oxc_react_compiler/tests/snapshots/useMemo-if-else-multiple-return.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/useMemo-if-else-multiple-return.js
---
import { c as _c } from "react/compiler-runtime";
// @validateExhaustiveMemoizationDependencies:false
function Component(props) {
	const $ = _c(4);
	let t0;
	bb0: {
		if (props.cond) {
			let t1;
			if ($[0] !== props.a) {
				t1 = makeObject(props.a);
				$[0] = props.a;
				$[1] = t1;
			} else {
				t1 = $[1];
			}
			t0 = t1;
			break bb0;
		}
		let t1;
		if ($[2] !== props.b) {
			t1 = makeObject(props.b);
			$[2] = props.b;
			$[3] = t1;
		} else {
			t1 = $[3];
		}
		t0 = t1;
	}
	const x = t0;
	return x;
}
